# riscv-functional-sim

./: .gitignore  .gitmodules  Cargo.toml  README.md  diff_sim.sh  log.txt  rv3264im.vadl  rv64ud-p-fcvt_w.dump  rv64ud-p-ldst.dump  todo
sim/: Cargo.toml  addi_dump  addi_dump2  build.rs  rv64ui-p-addi
sim/src/: alt_superpage.rs  args.rs  bus.rs  cpu.rs  csr.rs  csrs.rs  diff.rs  lib.rs  log.rs  logger.rs  main.rs  mmu.rs  plic.rs  superpage.rs  system.rs  uop_cache.rs
sim/src/block_cache/: block_cache.rs  mod.rs
sim/src/fpu_inst/: inst.rs
sim/src/insn_impl/: add.rs  addi.rs  addiw.rs  addw.rs  and.rs  andi.rs  auipc.rs  beq.rs  beqz.rs  bge.rs  bgeu.rs  bgez.rs  bgt.rs  bgtu.rs  bgtz.rs  ble.rs  bleu.rs  blez.rs  blt.rs  bltu.rs  bltz.rs  bne.rs  bnez.rs  c_add.rs  c_addi.rs  c_addi16sp.rs  c_addi4spn.rs  c_addiw.rs  c_addw.rs  c_and.rs  c_andi.rs  c_beqz.rs  c_bnez.rs  c_ebreak.rs  c_fld.rs  c_fldsp.rs  c_fsd.rs  c_fsdsp.rs  c_j.rs  c_jal.rs  (+174 more)
sim/src/insn_impl/insn_cached/: add_cached.rs  addi_cached.rs  addiw_cached.rs  addw_cached.rs  and_cached.rs  andi_cached.rs  auipc_cached.rs  beq_cached.rs  bge_cached.rs  bgeu_cached.rs  blt_cached.rs  bltu_cached.rs  bne_cached.rs  c_add_cached.rs  c_addi16sp_cached.rs  c_addi4spn_cached.rs  c_addi_cached.rs  c_addiw_cached.rs  c_addw_cached.rs  c_and_cached.rs  c_andi_cached.rs  c_beqz_cached.rs  c_bnez_cached.rs  c_ebreak_cached.rs  c_fld_cached.rs  c_fldsp_cached.rs  c_fsd_cached.rs  c_fsdsp_cached.rs  c_j_cached.rs  c_jalr_cached.rs  c_jr_cached.rs  c_ld_cached.rs  c_ldsp_cached.rs  (+142 more)
sim/src/uop_cache/: mod.rs  set_cached_insn.rs  uop_cache.rs
sim/tpl/: cpu_execute.txt  csr_bitfield.txt  csr_field_enum.txt  insn_arg_luts.txt  insn_args.txt  insn_template.txt
(+274 files in other folders)
