[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["release_max_level_off"] }
fesvr = { path = "../fesvr" }
clap = { version = "4.5.30", features = ["derive"] }

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
