[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["release_max_level_off"] }
fesvr = { path = "../fesvr" }
clap = { version = "4.5.30", features = ["derive"] }
simple-soft-float = "0.1.0"
regex = "1.11.1"
slog-async = "2.8.0"
slog-term = "2.9.1"
slog = "2.7.0"
lazy_static = "1.5.0"
slog-json = "2.6.1"
ahash = "0.8.11"
rustc-hash = "2.1.1"
once_cell = "1.21.3"
memmap2 = "0.9.5"
libc = "0.2.172"
branch_hints = "0.4.11"
goblin = "0.10.0"

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0.140" }
indexmap = { version = "1.9", features = ["serde"] }
